# meson-tensorflow

./: README.md  hello_tf.c  meson.build  meson_options.txt
